Remove zitadel. Add gin and bun. Add means to run DB migrations via bun. Remove custom code verifier in favor of oauth2 lib's

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 # Fitbit API access
 FITBIT_CLIENT_ID=
 FITBIT_CLIENT_SECRET=
+FITBIT_REDIRECT_URL=
+
+# postgres DB access
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+# Comment this out for dev; defaults to "require" in app
+#DB_SSLMODE=disable
